--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mailtrap": "^3.4.0",
     "mongoose": "^8.13.0",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
     "passport": "^0.7.0",
